linuxmuster-webui7 (1.0.116-1) lmn7-testing; urgency=medium 

  * Current snapshot build 6f833a2fe1377de1cc8bebb21f2f87b0978108f4
   *     Merge branch 'aj33' into alpha

 -- Andreas Till <andreas.till@netzint.de> Mon Feb 24 16:08:19 UTC 2020

linuxmuster-webui7 (1.0.115-1) lmn7; urgency=medium 

  * Current snapshot build 79bccd1ca5df7907df021aafb322dfecbc0c89f1
   *     Suggestion for one line test.

 -- Andreas Till <andreas.till@netzint.de> Mon Feb 24 13:23:28 UTC 2020

linuxmuster-webui7 (1.0.114-1) lmn7; urgency=medium 

  * Current snapshot build ef8f53b41f9a7b6a5cb9e00c59a53fc2e7e5a19f
   *     Fixed session generating bug adding teachers to session

 -- Andreas Till <andreas.till@netzint.de> Mon Feb 17 10:53:37 UTC 2020

linuxmuster-webui7 (1.0.113-1) lmn7-testing; urgency=medium 

  * Current snapshot build fb714ae0aabf7020e34e4bf77276507112d51694
   *     fixed some session genration issues

 -- Andreas Till <andreas.till@netzint.de> Tue Feb  4 12:05:41 UTC 2020

linuxmuster-webui7 (1.0.112-1) lmn7-testing; urgency=medium 

  * Current snapshot build 9001d16c7f48e36953465c6ddab3e9d6adc0cda8
   *     updated translation

 -- Andreas Till <andreas.till@netzint.de> Thu Jan 30 12:52:53 UTC 2020

linuxmuster-webui7 (1.0.111-1) lmn7-testing; urgency=medium 

  * Current snapshot build aa5fbbf20b6706b15fc5e72f5e9627c377792ae4
   *     added option to apply default role quota

 -- Andreas Till <andreas.till@netzint.de> Tue Jan 28 10:59:32 UTC 2020

linuxmuster-webui7 (1.0.110-1) lmn7; urgency=medium 

  * Current snapshot build e7baa5f305183e04f7cbd312ec95146c8f0b9359
   *     updated buildpackage.sh

 -- Andreas Till <andreas.till@netzint.de> Sun Dec 15 10:08:38 UTC 2019

linuxmuster-webui7 (1.0.109-1) lmn7; urgency=medium 

  * Current snapshot build 2bdf3446b37e9c3e959bbdb3a4ca74ee663abb53
   *     fixed null handling when operating trhough perl json

 -- Andreas Till <andreas.till@netzint.de> Fri Nov 22 12:11:07 UTC 2019
