@@ -198,7 +198,7 @@ div.legend-element {
 p.dotlist:before {
   content: '';
   position: absolute;
-  bottom: 0.4rem;
+  bottom: .4rem;
   width: 100%;
   height: 0;
   line-height: 0;
